--- a/Index.html
+++ b/Index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Ch Kranti Kumar Patro</h1>
     <p>I am a Mainframe developer in TCS, Chennai</p>
+    <p>Currently Reciding in Chennai Padur</p>
   </body>
 </html>
