--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Ch Kranti Kumar Patro</h1>
     <p>I am a Mainframe developer in TCS, Chennai</p>
     <p>Currently Reciding in Chennai Padur</p>
+    <p>trying to understand branching concept in github</p>
   </body>
 </html>
