--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Kranti Kumar</title>
   </head>
   <body>
     <h1>Ch Kranti Kumar Patro</h1>
