--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <title>Kranti Kumar</title>
   </head>
   <body>
-    <h1>Ch Kranti Kumar Patro</h1>
-    <p>I am a Mainframe developer in TCS, Chennai</p>
-    <p>Currently Reciding in Chennai Padur</p>
-    <p>trying to understand branching concept in github</p>
+    <a>Kranti Kumar</a>
+    <ul>
+      <li>Home</li>
+      <li>About Me</li>
+      <li>Resume</li>
+      <li>Contact Me</li>
+    </ul>
   </body>
 </html>
